--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
     <div>
       Hell there! Psycho Teddy!!
     </div>
+    <section class="test-section">
+      <form>
+        <input type="text" placeholder="name">
+        <button type="submit">Submit</button>
+      </form>
+    </section>
   </body>
 </html>
